# PatchWise

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: constraints.yaml
docs/diagrams/: workflow.md
examples/outputs/: combined-sbom.json  trivy-results.json
examples/pilot-repo/backend/: build.sbt
examples/pilot-repo/backend/project/: plugins.sbt
examples/pilot-repo/backend/src/main/scala/com/example/: Main.scala
examples/pilot-repo/frontend/: package-lock.json  package.json
schemas/: ai-report.schema.json  feasibility.schema.json
src/patchwise/core/: constraints.py  models.py  trivy.py
src/patchwise/jobs/: ai_report.py  evidence.py  feasibility.py  sbom.py  scan.py
src/patchwise/render/: markdown.py
tests/: test_trivy_parser.py
